--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "bootstrap": "^5.1.0",
     "core-js": "^3.6.5",
+    "moment-timezone": "^0.5.33",
     "vue": "^2.6.11"
   },
   "devDependencies": {
