--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.1.0",
     "core-js": "^3.6.5",
+    "dotenv": "^10.0.0",
     "moment-timezone": "^0.5.33",
     "vue": "^2.6.11"
   },
